--- a/index.html
+++ b/index.html
@@ -4,17 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Realtime NMBS Vertrektijden</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+e2e1H1xZ1tcHTul3e8DqRLVQjaxAg/P070pP3pFE="
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-o9N1j7kGhtjfiVxz41IrT9jp+1rssZCvobZp3gAbGzU="
-    crossorigin=""
-  ></script>
   <style>
     body {
       font-family: sans-serif;
@@ -22,11 +11,10 @@
       margin: 0;
       padding: 1rem;
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
     }
     h1 {
-      width: 100%;
       text-align: center;
     }
     #departures {
@@ -35,16 +23,7 @@
       border-radius: 8px;
       padding: 1rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      flex: 1;
-    }
-    #map {
-      width: 600px;
-      height: 600px;
-      margin-left: auto;
-      margin-top: 2rem;
-      flex: 1;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      width: 100%;
     }
     table {
       width: 100%;
@@ -81,7 +60,6 @@
   <h1>Realtime NMBS Vertrektijden</h1>
   <div id="status">Locatie bepalen...</div>
   <div id="departures"></div>
-  <div id="map"></div>
 
   <script>
     function updateClock() {
@@ -93,23 +71,6 @@
     }
     setInterval(updateClock, 1000);
     updateClock();
-
-    let map, marker;
-    function initMap(lat, lon) {
-      map = L.map('map').setView([lat, lon], 13);
-      L.tileLayer('https://{s}.tiles.openrailwaymap.org/standard/{z}/{x}/{y}.png', {
-        maxZoom: 19,
-        attribution: '&copy; <a href="https://www.openrailwaymap.org/">OpenRailwayMap</a>'
-      }).addTo(map);
-      marker = L.marker([lat, lon]).addTo(map);
-    }
-
-    function updateMapLocation(lat, lon) {
-      if (map && marker) {
-        map.setView([lat, lon], 13);
-        marker.setLatLng([lat, lon]);
-      }
-    }
 
     async function getNearestStation(lat, lon) {
       const res = await fetch('https://api.irail.be/stations/?format=json&lang=nl');
@@ -156,8 +117,6 @@
       navigator.geolocation.getCurrentPosition(async pos => {
         const { latitude, longitude } = pos.coords;
         try {
-          if (!map) initMap(latitude, longitude);
-          else updateMapLocation(latitude, longitude);
           const station = await getNearestStation(latitude, longitude);
           const departures = await getDepartures(station.name);
           displayDepartures(station, departures);
@@ -174,4 +133,4 @@
     setInterval(locateAndUpdate, 30000);
   </script>
 </body>
-</html> 
+</html>
