--- a/index.html
+++ b/index.html
@@ -10,20 +10,39 @@
       background: #f4f4f4;
       margin: 0;
       padding: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
     h1 {
       text-align: center;
     }
+    #input-container {
+      position: fixed;
+      top: 60px;
+      left: 10px;
+      background: #fff;
+      padding: 0.5rem;
+      border-radius: 6px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    #content-container {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+    }
     #departures {
-      max-width: 600px;
+      order: 2;
+    }
+    #train-schedule {
+      order: 1;
+    }
+    #departures, #train-schedule {
+      flex: 1 1 45%;
       background: white;
       border-radius: 8px;
       padding: 1rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      width: 100%;
+      min-width: 300px;
     }
     table {
       width: 100%;
@@ -57,9 +76,19 @@
 </head>
 <body>
   <div id="clock">00:00:00</div>
+
+  <div id="input-container">
+    <label for="train-input">Vul treinnummer in:</label>
+    <input type="text" id="train-input" placeholder="Bijv. IC2310" />
+    <button onclick="zoekTrein()">Zoek</button>
+  </div>
+
   <h1>Realtime NMBS Vertrektijden</h1>
   <div id="status">Locatie bepalen...</div>
-  <div id="departures"></div>
+  <div id="content-container">
+    <div id="train-schedule"></div>
+    <div id="departures"></div>
+  </div>
 
   <script>
     function updateClock() {
@@ -92,7 +121,7 @@
     }
 
     async function getDepartures(stationName) {
-      const res = await fetch(`https://api.irail.be/liveboard/?station=${encodeURIComponent(stationName)}&format=json&lang=nl`);
+      const res = await fetch(`https://api.irail.be/liveboard/?station=${encodeURIComponent(stationName)}&format=json&lang=nl&arrdep=departure`);
       const data = await res.json();
       return data.departures.departure;
     }
@@ -100,12 +129,15 @@
     function displayDepartures(station, departures) {
       document.getElementById('status').innerText = `Dichtstbijzijnd station: ${station.name}`;
       const div = document.getElementById('departures');
-      let html = '<table><tr><th>Treinnummer</th><th>Bestemming</th><th>Vertrek</th><th>Peron</th></tr>';
-      departures.slice(0, 10).forEach(dep => {
+
+      let html = '<h2>Vertrektijden</h2>';
+      html += '<table><tr><th>Treinnummer</th><th>Bestemming</th><th>Vertrek</th><th>Peron</th></tr>';
+      departures.slice(0, 20).forEach(dep => {
         const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'});
         html += `<tr><td>${dep.vehicle?.split('.')[1] || '-'}</td><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td></tr>`;
       });
       html += '</table>';
+
       div.innerHTML = html;
     }
 
@@ -127,6 +159,32 @@
       }, err => {
         showError('Locatie niet beschikbaar.');
       });
+    }
+
+    async function zoekTrein() {
+      const input = document.getElementById('train-input').value.trim().toUpperCase();
+      if (!input.startsWith('BE.NMBS.')) inputFull = `BE.NMBS.${input}`;
+      else inputFull = input;
+
+      try {
+        const res = await fetch(`https://api.irail.be/vehicle/?id=${inputFull}&format=json&lang=nl`);
+        const data = await res.json();
+
+        const div = document.getElementById('train-schedule');
+
+        let html = `<h2>Dienstregeling van trein ${input}</h2>`;
+        html += '<table><tr><th>Station</th><th>Aankomst</th><th>Vertrek</th><th>Peron</th></tr>';
+        for (const stop of data.stops.stop) {
+          const arr = stop.arrival ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'}) : '-';
+          const dep = stop.departure ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'}) : '-';
+          html += `<tr><td>${stop.station}</td><td>${arr}</td><td>${dep}</td><td>${stop.platform || '-'}</td></tr>`;
+        }
+        html += '</table>';
+        div.innerHTML = html;
+      } catch (err) {
+        showError('Trein niet gevonden.');
+        console.error(err);
+      }
     }
 
     locateAndUpdate();
