--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
       const div = document.getElementById('departures');
 
       let html = '<h2>Vertrektijden</h2>';
-      html += '<table><tr><th>Treinnummer</th><th>Bestemming</th><th>Vertrek</th><th>Peron</th></tr>';
+      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th></tr>';
       departures.slice(0, 20).forEach(dep => {
         const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'});
-        html += `<tr><td>${dep.vehicle?.split('.')[1] || '-'}</td><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td></tr>`;
+        html += `<tr><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td></tr>`;
       });
       html += '</table>';
 
