--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
     }
     #departures {
       order: 1;
+      flex: 1 1 45%;
     }
     #train-schedule {
       order: 2;
+      flex: 1 1 45%;
+      display: none;
     }
     #departures, #train-schedule {
-      flex: 1 1 45%;
       background: white;
       border-radius: 8px;
       padding: 1rem;
@@ -95,105 +97,144 @@
   </div>
 
   <script>
+    // Klok
     function updateClock() {
       const now = new Date();
-      const h = String(now.getHours()).padStart(2, '0');
-      const m = String(now.getMinutes()).padStart(2, '0');
-      const s = String(now.getSeconds()).padStart(2, '0');
-      document.getElementById('clock').textContent = `${h}:${m}:${s}`;
+      document.getElementById('clock').textContent =
+        now.toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
     }
     setInterval(updateClock, 1000);
     updateClock();
 
+    // Toon of verberg trein-dienstregelkader
+    function setTrainScheduleVisible(vis) {
+      document.getElementById('train-schedule').style.display = vis ? 'block' : 'none';
+    }
+
+    // Haal dichtsbijzijnd station op
     async function getNearestStation(lat, lon) {
       const res = await fetch('https://api.irail.be/stations/?format=json&lang=nl');
       const data = await res.json();
-      let nearest = null;
-      let minDistance = Infinity;
-
-      for (const station of data.station) {
-        if (!station.locationX || !station.locationY) continue;
-        const dx = lat - parseFloat(station.locationY);
-        const dy = lon - parseFloat(station.locationX);
-        const distance = Math.sqrt(dx*dx + dy*dy);
-        if (distance < minDistance) {
-          minDistance = distance;
-          nearest = station;
-        }
-      }
+      let nearest = null, minDist = Infinity;
+      data.station.forEach(st => {
+        if (!st.locationX || !st.locationY) return;
+        const dx = lat - +st.locationY, dy = lon - +st.locationX;
+        const dist = Math.hypot(dx, dy);
+        if (dist < minDist) { minDist = dist; nearest = st; }
+      });
       return nearest;
     }
 
+    // Haal liveboard vertrektijden op
     async function getDepartures(stationName) {
-      const res = await fetch(`https://api.irail.be/liveboard/?station=${encodeURIComponent(stationName)}&format=json&lang=nl&arrdep=departure`);
+      const res = await fetch(
+        `https://api.irail.be/liveboard/?station=${encodeURIComponent(stationName)}&format=json&lang=nl&arrdep=departure`
+      );
       const data = await res.json();
       return data.departures.departure;
     }
 
-    function displayDepartures(station, departures) {
+    // Toon vertrektijden + volgende 5 stations per trein
+    async function displayDepartures(station, departures) {
       document.getElementById('status').innerText = `Dichtstbijzijnd station: ${station.name}`;
-      const div = document.getElementById('departures');
 
+      // Voor de eerste 5 treinen: haal de vehicle-stops op
+      const stationPathsMap = {};
+      const firstFive = departures.slice(0, 5);
+      await Promise.all(firstFive.map(async dep => {
+        if (!dep.vehicle) return;
+        try {
+          const vid = dep.vehicle;
+          const res = await fetch(`https://api.irail.be/vehicle/?id=${vid}&format=json&lang=nl`);
+          const info = await res.json();
+          // Vind index van huidig station
+          const stops = info.stops.stop;
+          const idx = stops.findIndex(s => s.station === station.name);
+          if (idx >= 0) {
+            // Neem volgende vijf stations
+            stationPathsMap[vid] = stops.slice(idx + 1, idx + 6).map(s => s.station);
+          }
+        } catch (e) {
+          console.warn('Paths opvragen mislukt voor', dep.vehicle);
+        }
+      }));
+
+      // Bouw HTML-tabel
       let html = `<h2>Vertrektijden van ${station.name}</h2>`;
-      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th><th>Vertraging</th></tr>';
-      departures.slice(0, 20).forEach(dep => {
-        const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'});
+      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th><th>Vertraging</th><th>Stations</th></tr>';
+      for (let i = 0; i < departures.length && i < 20; i++) {
+        const dep = departures[i];
+        const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', {hour:'2-digit',minute:'2-digit'});
         const delay = dep.delay ? `<span class="delay">${dep.delay} min</span>` : '-';
-        html += `<tr><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td><td>${delay}</td></tr>`;
-      });
+        let paths = '-';
+        if (dep.vehicle && stationPathsMap[dep.vehicle]) {
+          paths = stationPathsMap[dep.vehicle].join(' → ');
+        }
+        html += `<tr>
+                   <td>${dep.station}</td>
+                   <td>${time}</td>
+                   <td>${dep.platform || '-'}</td>
+                   <td>${delay}</td>
+                   <td>${paths}</td>
+                 </tr>`;
+      }
       html += '</table>';
 
-      div.innerHTML = html;
+      document.getElementById('departures').innerHTML = html;
     }
 
-    function showError(message) {
-      document.getElementById('status').innerText = `Fout: ${message}`;
+    // Foutmelding
+    function showError(msg) {
+      document.getElementById('status').innerText = `Fout: ${msg}`;
     }
 
-    function locateAndUpdate() {
+    // Locatie bepalen en verversen
+    async function locateAndUpdate() {
       navigator.geolocation.getCurrentPosition(async pos => {
-        const { latitude, longitude } = pos.coords;
         try {
-          const station = await getNearestStation(latitude, longitude);
-          const departures = await getDepartures(station.name);
-          displayDepartures(station, departures);
-        } catch (err) {
+          const station = await getNearestStation(pos.coords.latitude, pos.coords.longitude);
+          const deps = await getDepartures(station.name);
+          await displayDepartures(station, deps);
+        } catch (e) {
           showError('Kon geen vertrektijden ophalen.');
-          console.error(err);
+          console.error(e);
         }
-      }, err => {
-        showError('Locatie niet beschikbaar.');
-      });
+      }, () => showError('Locatie niet beschikbaar.'));
     }
 
+    // Zoekdienstregeling
     async function zoekTrein() {
       const input = document.getElementById('train-input').value.trim().toUpperCase();
-      if (!input.startsWith('BE.NMBS.')) inputFull = `BE.NMBS.${input}`;
-      else inputFull = input;
-
+      if (!input) return;
+      const id = input.startsWith('BE.NMBS.') ? input : `BE.NMBS.${input}`;
       try {
-        const res = await fetch(`https://api.irail.be/vehicle/?id=${inputFull}&format=json&lang=nl`);
+        const res = await fetch(`https://api.irail.be/vehicle/?id=${id}&format=json&lang=nl`);
         const data = await res.json();
-
-        const div = document.getElementById('train-schedule');
-
         let html = `<h2>Dienstregeling van trein ${input}</h2>`;
         html += '<table><tr><th>Station</th><th>Aankomst</th><th>Vertrek</th><th>Peron</th></tr>';
-        for (const stop of data.stops.stop) {
-          const arr = stop.arrival ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'}) : '-';
-          const dep = stop.departure ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'}) : '-';
-          html += `<tr><td>${stop.station}</td><td>${arr}</td><td>${dep}</td><td>${stop.platform || '-'}</td></tr>`;
-        }
+        data.stops.stop.forEach(stop => {
+          const arr = stop.arrival
+            ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE',{hour:'2-digit',minute:'2-digit'})
+            : '-';
+          const dep = stop.departure
+            ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE',{hour:'2-digit',minute:'2-digit'})
+            : '-';
+          html += `<tr><td>${stop.station}</td><td>${arr}</td><td>${dep}</td><td>${stop.platform||'-'}</td></tr>`;
+        });
         html += '</table>';
-        div.innerHTML = html;
-      } catch (err) {
+        document.getElementById('train-schedule').innerHTML = html;
+        setTrainScheduleVisible(true);
+      } catch (e) {
         showError('Trein niet gevonden.');
-        console.error(err);
+        setTrainScheduleVisible(false);
+        console.error(e);
       }
     }
 
+    // Initialisatie
     locateAndUpdate();
     setInterval(locateAndUpdate, 30000);
+    setTrainScheduleVisible(false);
   </script>
 </body>
 </html>
