--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
   <script>
     // Klok
     function updateClock() {
+      const now = new Date();
       document.getElementById('clock').textContent =
-        new Date().toLocaleTimeString('nl-BE',{hour:'2-digit',minute:'2-digit',second:'2-digit'});
+        now.toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
     }
-    setInterval(updateClock,1000);
+    setInterval(updateClock, 1000);
     updateClock();
 
-    // Toon of verberg dienstregelingskader
     function setTrainScheduleVisible(vis) {
       document.getElementById('train-schedule').style.display = vis ? 'block' : 'none';
     }
@@ -113,12 +113,13 @@
     async function getNearestStation(lat, lon) {
       const res = await fetch('https://api.irail.be/stations/?format=json&lang=nl');
       const data = await res.json();
-      let nearest=null, minDist=Infinity;
-      data.station.forEach(st=>{
-        if(!st.locationX||!st.locationY) return;
-        const dx=lat-+st.locationY, dy=lon-+st.locationX;
-        const d=Math.hypot(dx,dy);
-        if(d<minDist){minDist=d; nearest=st;}
+      let nearest = null, minDist = Infinity;
+      data.station.forEach(st => {
+        if (!st.locationX || !st.locationY) return;
+        const dx = lat - parseFloat(st.locationY);
+        const dy = lon - parseFloat(st.locationX);
+        const d = Math.hypot(dx, dy);
+        if (d < minDist) { minDist = d; nearest = st; }
       });
       return nearest;
     }
@@ -131,35 +132,30 @@
       return data.departures.departure;
     }
 
-    // Toon vertrektijden + tussenstations (namen)
+    // Toon vertrektijden + alle tussenstations
     async function displayDepartures(station, departures) {
       document.getElementById('status').innerText = `Dichtstbijzijnd station: ${station.name}`;
 
-      // Map vehicleId → lijst van tussenstations (namen)
-      const stationNamesMap = {};
+      const stationPathsMap = {};
       await Promise.all(departures.map(async dep => {
         if (!dep.vehicle) return;
         try {
-          const vid = dep.vehicle;
-          const res = await fetch(`https://api.irail.be/vehicle/?id=${vid}&format=json&lang=nl`);
-          const info = await res.json();
-          stationNamesMap[vid] = info.stops.stop.map(s => s.station);
+          const infoRes = await fetch(`https://api.irail.be/vehicle/?id=${dep.vehicle}&format=json&lang=nl`);
+          const info = await infoRes.json();
+          stationPathsMap[dep.vehicle] = info.stops.stop.map(s => s.station);
         } catch (e) {
           console.warn('Stations ophalen mislukt voor', dep.vehicle);
         }
       }));
 
       let html = `<h2>Vertrektijden van ${station.name}</h2>`;
-      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th><th>Vertraging</th><th>Tussenstations</th></tr>';
-      departures.slice(0,20).forEach(dep => {
-        const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE',{hour:'2-digit',minute:'2-digit'});
+      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th><th>Vertraging</th><th>Stations</th></tr>';
+      departures.slice(0, 20).forEach(dep => {
+        const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit' });
         const delay = dep.delay ? `<span class="delay">${dep.delay} min</span>` : '-';
-        let stations = '-';
-        if (dep.vehicle && stationNamesMap[dep.vehicle]) {
-          stations = stationNamesMap[dep.vehicle]
-            .filter(name => name !== station.name)
-            .join(' → ');
-        }
+        const stations = dep.vehicle && stationPathsMap[dep.vehicle]
+          ? stationPathsMap[dep.vehicle].join(' → ')
+          : '-';
         html += `<tr>
                    <td>${dep.station}</td>
                    <td>${time}</td>
@@ -200,8 +196,12 @@
         let html = `<h2>Dienstregeling van trein ${input}</h2>`;
         html += '<table><tr><th>Station</th><th>Aankomst</th><th>Vertrek</th><th>Peron</th></tr>';
         data.stops.stop.forEach(stop => {
-          const arr = stop.arrival ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE',{hour:'2-digit',minute:'2-digit'}) : '-';
-          const dep = stop.departure ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE',{hour:'2-digit',minute:'2-digit'}) : '-';
+          const arr = stop.arrival
+            ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit' })
+            : '-';
+          const dep = stop.departure
+            ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit' })
+            : '-';
           html += `<tr><td>${stop.station}</td><td>${arr}</td><td>${dep}</td><td>${stop.platform || '-'}</td></tr>`;
         });
         html += '</table>';
