--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
     }
     #departures {
       order: 1;
-      flex: 1 1 45%;
     }
     #train-schedule {
       order: 2;
-      flex: 1 1 45%;
-      display: none;
     }
     #departures, #train-schedule {
+      flex: 1 1 45%;
       background: white;
       border-radius: 8px;
       padding: 1rem;
@@ -54,10 +52,6 @@
       padding: 0.5rem;
       text-align: left;
       border-bottom: 1px solid #ccc;
-    }
-    .delay {
-      color: red;
-      font-weight: bold;
     }
     #status {
       text-align: center;
@@ -97,126 +91,106 @@
   </div>
 
   <script>
-    // Klok
     function updateClock() {
       const now = new Date();
-      document.getElementById('clock').textContent =
-        now.toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+      const h = String(now.getHours()).padStart(2, '0');
+      const m = String(now.getMinutes()).padStart(2, '0');
+      const s = String(now.getSeconds()).padStart(2, '0');
+      document.getElementById('clock').textContent = `${h}:${m}:${s}`;
     }
     setInterval(updateClock, 1000);
     updateClock();
 
-    function setTrainScheduleVisible(vis) {
-      document.getElementById('train-schedule').style.display = vis ? 'block' : 'none';
-    }
-
     async function getNearestStation(lat, lon) {
       const res = await fetch('https://api.irail.be/stations/?format=json&lang=nl');
       const data = await res.json();
-      let nearest = null, minDist = Infinity;
-      data.station.forEach(st => {
-        if (!st.locationX || !st.locationY) return;
-        const dx = lat - parseFloat(st.locationY);
-        const dy = lon - parseFloat(st.locationX);
-        const d = Math.hypot(dx, dy);
-        if (d < minDist) { minDist = d; nearest = st; }
-      });
+      let nearest = null;
+      let minDistance = Infinity;
+
+      for (const station of data.station) {
+        if (!station.locationX || !station.locationY) continue;
+        const dx = lat - parseFloat(station.locationY);
+        const dy = lon - parseFloat(station.locationX);
+        const distance = Math.sqrt(dx*dx + dy*dy);
+        if (distance < minDistance) {
+          minDistance = distance;
+          nearest = station;
+        }
+      }
       return nearest;
     }
 
     async function getDepartures(stationName) {
-      const res = await fetch(
-        `https://api.irail.be/liveboard/?station=${encodeURIComponent(stationName)}&format=json&lang=nl&arrdep=departure`
-      );
+      const res = await fetch(`https://api.irail.be/liveboard/?station=${encodeURIComponent(stationName)}&format=json&lang=nl&arrdep=departure`);
       const data = await res.json();
       return data.departures.departure;
     }
 
-    // Toon vertrektijden + alle tussenstations
-    async function displayDepartures(station, departures) {
+    function displayDepartures(station, departures) {
       document.getElementById('status').innerText = `Dichtstbijzijnd station: ${station.name}`;
+      const div = document.getElementById('departures');
 
-      const stationPathsMap = {};
-      await Promise.all(departures.map(async dep => {
-        if (!dep.vehicle) return;
-        try {
-          const infoRes = await fetch(`https://api.irail.be/vehicle/?id=${dep.vehicle}&format=json&lang=nl`);
-          const info = await infoRes.json();
-          stationPathsMap[dep.vehicle] = info.stops.stop.map(s => s.station);
-        } catch (e) {
-          console.warn('Stations ophalen mislukt voor', dep.vehicle);
-        }
-      }));
-
-      let html = `<h2>Vertrektijden van ${station.name}</h2>`;
-      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th><th>Vertraging</th><th>Stations</th></tr>';
+      let html = '<h2>Vertrektijden</h2>';
+      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Peron</th><th>Tussenstations</th></tr>';
       departures.slice(0, 20).forEach(dep => {
-        const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit' });
-        const delay = dep.delay ? `<span class="delay">${dep.delay} min</span>` : '-';
-        const stations = dep.vehicle && stationPathsMap[dep.vehicle]
-          ? stationPathsMap[dep.vehicle].join(' → ')
-          : '-';
-        html += `<tr>
-                   <td>${dep.station}</td>
-                   <td>${time}</td>
-                   <td>${dep.platform || '-'}</td>
-                   <td>${delay}</td>
-                   <td>${stations}</td>
-                 </tr>`;
+        const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'});
+        const nextStations = dep.route.slice(0, 5).map(station => station.name).join(' → ');
+        html += `<tr><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td><td>${nextStations}</td></tr>`;
       });
       html += '</table>';
 
-      document.getElementById('departures').innerHTML = html;
+      div.innerHTML = html;
     }
 
-    function showError(msg) {
-      document.getElementById('status').innerText = `Fout: ${msg}`;
+    function showError(message) {
+      document.getElementById('status').innerText = `Fout: ${message}`;
     }
 
-    async function locateAndUpdate() {
+    function locateAndUpdate() {
       navigator.geolocation.getCurrentPosition(async pos => {
+        const { latitude, longitude } = pos.coords;
         try {
-          const station = await getNearestStation(pos.coords.latitude, pos.coords.longitude);
-          const deps = await getDepartures(station.name);
-          await displayDepartures(station, deps);
-        } catch (e) {
+          const station = await getNearestStation(latitude, longitude);
+          const departures = await getDepartures(station.name);
+          displayDepartures(station, departures);
+        } catch (err) {
           showError('Kon geen vertrektijden ophalen.');
-          console.error(e);
+          console.error(err);
         }
-      }, () => showError('Locatie niet beschikbaar.'));
+      }, err => {
+        showError('Locatie niet beschikbaar.');
+      });
     }
 
     async function zoekTrein() {
       const input = document.getElementById('train-input').value.trim().toUpperCase();
-      if (!input) return;
-      const id = input.startsWith('BE.NMBS.') ? input : `BE.NMBS.${input}`;
+      if (!input.startsWith('BE.NMBS.')) inputFull = `BE.NMBS.${input}`;
+      else inputFull = input;
+
       try {
-        const res = await fetch(`https://api.irail.be/vehicle/?id=${id}&format=json&lang=nl`);
+        const res = await fetch(`https://api.irail.be/vehicle/?id=${inputFull}&format=json&lang=nl`);
         const data = await res.json();
+
+        const div = document.getElementById('train-schedule');
+        div.style.display = 'block';  // Zorg ervoor dat de dienstregeling zichtbaar is
+
         let html = `<h2>Dienstregeling van trein ${input}</h2>`;
         html += '<table><tr><th>Station</th><th>Aankomst</th><th>Vertrek</th><th>Peron</th></tr>';
-        data.stops.stop.forEach(stop => {
-          const arr = stop.arrival
-            ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit' })
-            : '-';
-          const dep = stop.departure
-            ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE', { hour: '2-digit', minute: '2-digit' })
-            : '-';
+        for (const stop of data.stops.stop) {
+          const arr = stop.arrival ? new Date(stop.arrival * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'}) : '-';
+          const dep = stop.departure ? new Date(stop.departure * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'}) : '-';
           html += `<tr><td>${stop.station}</td><td>${arr}</td><td>${dep}</td><td>${stop.platform || '-'}</td></tr>`;
-        });
+        }
         html += '</table>';
-        document.getElementById('train-schedule').innerHTML = html;
-        setTrainScheduleVisible(true);
-      } catch (e) {
+        div.innerHTML = html;
+      } catch (err) {
         showError('Trein niet gevonden.');
-        setTrainScheduleVisible(false);
-        console.error(e);
+        console.error(err);
       }
     }
 
     locateAndUpdate();
     setInterval(locateAndUpdate, 30000);
-    setTrainScheduleVisible(false);
   </script>
 </body>
 </html>
