--- a/index.html
+++ b/index.html
@@ -136,10 +136,11 @@
       const div = document.getElementById('departures');
 
       let html = '<h2>Vertrektijden</h2>';
-      html += '<table><tr><th>Bestemming</th><th>Vertrek</th><th>Perron</th></tr>';
+      html += '<table><tr><th>Type</th><th>Bestemming</th><th>Vertrek</th><th>Perron</th></tr>';
       departures.slice(0, 20).forEach(dep => {
         const time = new Date(dep.time * 1000).toLocaleTimeString('nl-BE', {hour: '2-digit', minute: '2-digit'});
-        html += `<tr class="clickable" onclick="zoekTreinViaLink('${dep.vehicle}')"><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td></tr>`;
+        const trainType = dep.vehicle?.split('.')[2] || '-';
+        html += `<tr class="clickable" onclick="zoekTreinViaLink('${dep.vehicle}')"><td>${trainType}</td><td>${dep.station}</td><td>${time}</td><td>${dep.platform || '-'}</td></tr>`;
       });
       html += '</table>';
 
