--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     }
     #departures {
       order: 1;
+      max-height: 80vh;
+      overflow-y: auto;
     }
     #train-schedule {
       order: 2;
