--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
     #departures {
       order: 1;
-      max-height: 80vh;
+      max-height: 12rem;
       overflow-y: auto;
     }
     #train-schedule {
