--- a/index.html
+++ b/index.html
@@ -30,21 +30,15 @@
       flex-wrap: wrap;
       margin-top: 1rem;
     }
-    #departures {
-      order: 1;
-      max-height: 80vh;
-      overflow-y: auto;
-    }
-    #train-schedule {
-      order: 2;
-    }
-    #departures, #train-schedule, #map-tab {
+    #departures, #train-schedule {
       flex: 1 1 45%;
       background: white;
       border-radius: 8px;
       padding: 1rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       min-width: 300px;
+      max-height: 80vh;
+      overflow-y: auto;
     }
     table {
       width: 100%;
